fix(@dpc-sdp/ripple-ui-core): make all image variants spacing the same

--- a/packages/ripple-ui-core/src/components/header/RplHeader.css
+++ b/packages/ripple-ui-core/src/components/header/RplHeader.css
@@ -213,7 +213,7 @@
   }
 }
 
-.rpl-header--background.rpl-header--reverse {
+.rpl-header--background {
   @media (--rpl-bp-s) {
     --local-padding-bottom: var(--rpl-sp-11);
   }
